Revision history for Dist-Zilla-Plugin-DynamicPrereqs

{{$NEXT}}

0.028     2016-05-05 00:53:13Z
          - fix test failure with MSWin32 path separators

0.027     2016-05-03 00:42:24Z (TRIAL RELEASE)
          - bundled an updated ExtUtils::HasCompiler for can_xs(), to support
            building with a noexec $TMPDIR.

0.026     2016-04-22 09:54:05Z (TRIAL RELEASE)
          - bump version of [MakeMaker::Awesome] needed for optional tests, to
            skip past some problematic changes to Makefile.PL whitespace

0.025     2016-04-21 15:18:58Z (TRIAL RELEASE)
          - bumped up "background perl" used in ExtUtils::HasCompiler
            inlining, to avoid inlining File::Temp and its dependencies

0.024     2016-04-21 11:07:53Z (TRIAL RELEASE)
          - can_xs() is now implemented with ExtUtils::HasCompiler, rather
            than ExtUtils::CBuilder
          - new helper sub: want_pp, for use with can_xs

0.023     2016-04-21 10:44:21Z
          - really fix all remaining tests that require newer MakeMaker
            behaviour

0.022     2016-04-18 21:08:47Z
          - fix test that was written assuming older MakeMaker behaviour

0.021     2016-03-16 20:50:11Z (TRIAL RELEASE)
          - optimize use of blank lines in modified Makefile.PL content

0.020     2016-03-16 02:42:30Z (TRIAL RELEASE)
          - perform Makefile.PL content modification at the proper time (as a
            FileMunger, rather than InstallTool)

0.019     2016-01-20 04:43:24Z
          - perl prerequisite lowered to 5.8 (Graham Ollis)

0.018     2015-12-02 03:40:03Z
          - added options '-body', '-body_from_file' as aliases for '-raw',
            '-raw_from_file'
          - *_requires subs now warn if adding a prereq that might conflict
            with one that already exists (prereq merging not yet supported)

0.017     2015-09-27 07:13:45Z
          - fix new test failure on MSWin32

0.016     2015-09-07 00:12:19Z